--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,13 +1,13 @@
 steps:
 # Build the container image
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/PROJECT_ID/IMAGE', '.']
+  args: ['build', '-t', 'gcr.io/forward-aura-310706/backend', '.']
 # Push the container image to Container Registry
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/PROJECT_ID/IMAGE']
+  args: ['push', 'gcr.io/forward-aura-310706/backend']
 # Deploy container image to Cloud Run
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: gcloud
-  args: ['run', 'deploy', 'SERVICE-NAME', '--image', 'gcr.io/PROJECT_ID/IMAGE', '--region', 'REGION', '--platform', 'managed']
+  args: ['run', 'deploy', 'backend', '--image', 'gcr.io/forward-aura-310706/backend', '--region', 'REGION', '--platform', 'managed']
 images:
-- gcr.io/PROJECT_ID/IMAGE
+- gcr.io/forward-aura-310706/backend
